yaml/http-go-pod-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-go
  labels:
    creation_method: manual
    env: prod
spec:
  containers:
  - name: http-go
    image: gasbugs/http-go
    ports: 
    - containerPort: 8080
      protocol: TCP
