yaml/blue-jenkins-svc-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: blue
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pod-jenkins
  name: pod-jenkins
  namespace: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-jenkins
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pod-jenkins
    spec:
      containers:
      - image: jenkins/jenkins:lts
        name: jenkins
        ports:
        - containerPort: 8080
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pod-jenkins
  name: srv-jenkins
  namespace: blue
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pod-jenkins
status:
  loadBalancer: {}
