yaml/tomcat-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-np
spec:
  type: NodePort
  selector:
    run: tomcat 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: tomcat 
  name: tomcat 
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tomcat 
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: tomcat 
    spec:
      containers:
      - image: tomcat 
        name: tomcat 
        ports:
        - containerPort: 8080
        resources: {}
status: {}
